--- a/docs/tutorials/open-source-evaluator.mdx
+++ b/docs/tutorials/open-source-evaluator.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Open Source API Client"
+title: "Open Source Evaluator"
 description: "Get started with UpTrain in a few simple steps"
 ---
 
-This tutorial will walk you through the process of getting started with UpTrain using our open source API client. You can use this API client to log and evaluate your data, and get results in a few simple steps.
+This tutorial will walk you through the process of getting started with UpTrain using our open source Evaluator. You can use this Evaluator to log and evaluate your data, and get results in a few simple steps.
 
 ### Get your OpenAI API key
 
