--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -17,6 +17,12 @@ Run the following commands in your terminal to install UpTrain:
 pip install uptrain
 ```
 
+### Import required libraries
+
+```python
+from uptrain.framework import APIClient, Evals, CritiqueTone
+import json
+```
 
 ### Create an UpTrain API Client
 
@@ -29,7 +35,7 @@ client = APIClient(uptrain_api_key=UPTRAIN_API_KEY)
 
 ### Create your data
 
-You can define your data as simple dictionary with the following keys:
+You can define your data as a simple dictionary with the following keys:
 
 - `question`: The question you want to ask
 - `context`: The context relevant to the question
@@ -64,9 +70,6 @@ Now that we have our data, we can log it and evaluate it using UpTrain. We use t
 You can find the list of all available evaluations [here](/key-components/evals).
 
 ```python
-from uptrain.framework import APIClient, Evals, CritiqueTone
-import json
-
 results = client.log_and_evaluate(
     project_name="Sample-Project",
     data=data,
