--- a/docs/tutorials/open-source-evaluator.mdx
+++ b/docs/tutorials/open-source-evaluator.mdx
@@ -31,7 +31,7 @@ eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)
 
 ### Create your data
 
-You can define your data as simple dictionary with the following keys:
+You can define your data as a simple dictionary with the following keys:
 
 - `question`: The question you want to ask
 - `context`: The context relevant to the question
@@ -55,7 +55,7 @@ data = [{
 ```
 
 
-### Log and evaluate your data
+### Evaluate your data
 
 Now that we have our data, we can log it and evaluate it using UpTrain. We use the `evaluate` method to do this. This method takes the following arguments:
 
