--- a/docs/tutorials/open-source-evaluator.mdx
+++ b/docs/tutorials/open-source-evaluator.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Open Source API Client"
+title: "Open Source Evaluator"
 description: "Get started with UpTrain in a few simple steps"
 ---
 
-This tutorial will walk you through the process of getting started with UpTrain using our open source API client. You can use this API client to log and evaluate your data, and get results in a few simple steps.
+This tutorial will walk you through the process of getting started with UpTrain using our open source Evaluator. You can use this Evaluator to log and evaluate your data, and get results in a few simple steps.
 
 ### Get your OpenAI API key
 
@@ -17,18 +17,21 @@ Run the following commands in your terminal to install UpTrain:
 pip install uptrain
 ```
 
-### Create an EvalLLM Client
+### Create an EvalLLM Evaluator
 
-Before we can start using UpTrain, we need to create an API client. You can do this by passing your API key to the `EvalLLM` constructor.
+Before we can start using UpTrain, we need to create an EvalLLM Evaluator. You can do this by passing your API key to the `EvalLLM` constructor.
 
 ```python
-client = EvalLLM(openai_api_key=OPENAI_API_KEY)
+from uptrain.framework import EvalLLM, Evals, CritiqueTone
+import json
+
+eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)
 ```
 
 
 ### Create your data
 
-You can define your data as simple dictionary with the following keys:
+You can define your data as a simple dictionary with the following keys:
 
 - `question`: The question you want to ask
 - `context`: The context relevant to the question
@@ -52,7 +55,7 @@ data = [{
 ```
 
 
-### Log and evaluate your data
+### Evaluate your data
 
 Now that we have our data, we can log it and evaluate it using UpTrain. We use the `evaluate` method to do this. This method takes the following arguments:
 
@@ -62,10 +65,7 @@ Now that we have our data, we can log it and evaluate it using UpTrain. We use t
 You can find the list of all available evaluations [here](/key-components/evals).
 
 ```python
-from uptrain.framework import EvalLLM, Evals, CritiqueTone
-import json
-
-results = client.evaluate(
+results = eval_llm.evaluate(
     data=data,
     checks=[Evals.CONTEXT_RELEVANCE, Evals.FACTUAL_ACCURACY, Evals.RESPONSE_RELEVANCE, CritiqueTone(persona="teacher")]
 )
