Add settings to direct import

--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -20,7 +20,7 @@ pip install uptrain
 ### Import required libraries
 
 ```python
-from uptrain.framework import APIClient, Evals, CritiqueTone
+from uptrain import APIClient, Evals, CritiqueTone
 import json
 ```
 
