--- a/docs/tutorials/open-source-evaluator.mdx
+++ b/docs/tutorials/open-source-evaluator.mdx
@@ -22,7 +22,7 @@ pip install uptrain
 Before we can start using UpTrain, we need to create an EvalLLM Evaluator. You can do this by passing your API key to the `EvalLLM` constructor.
 
 ```python
-from uptrain.framework import EvalLLM, Evals, CritiqueTone
+from uptrain import EvalLLM, Evals, CritiqueTone
 import json
 
 eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)
