Update notebooks imports

--- a/examples/evaluate_guideline_adherence.ipynb
+++ b/examples/evaluate_guideline_adherence.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from uptrain.framework import EvalLLM, GuidelineAdherence\n",
+    "from uptrain import EvalLLM, GuidelineAdherence\n",
     "import json\n",
     "\n",
     "OPENAI_API_KEY = \"sk-*****************\"  # Insert your OpenAI key here"
