--- a/examples/open_source_evaluator_tutorial.ipynb
+++ b/examples/open_source_evaluator_tutorial.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from uptrain.framework import EvalLLM, Evals, CritiqueTone\n",
+    "from uptrain import EvalLLM, Evals, CritiqueTone\n",
     "import json"
    ]
   },
