--- a/examples/experiments_evaluation_tutorial.ipynb
+++ b/examples/experiments_evaluation_tutorial.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from uptrain.framework import APIClient, Evals, CritiqueTone\n",
+    "from uptrain import APIClient, Evals, CritiqueTone\n",
     "import json"
    ]
   },
