--- a/examples/benchmarking_results.ipynb
+++ b/examples/benchmarking_results.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "**Overview**: In this notebook, we will compare different UpTrain stanard evals against human judgements. For every example, we have an eval score along with an explanation. Each example is assigned a score by a human for every eval. \n",
     "\n",
-    "There are total 6 evals, we have convered in this notebook:\n",
+    "There are total 6 evals, we have covered in this notebook:\n",
     "- Context Relevance\n",
     "- Response Conciseness\n",
     "- Response Match\n",
