--- a/examples/context_quality_comparison.ipynb
+++ b/examples/context_quality_comparison.ipynb
@@ -328,8 +328,8 @@
     }
    ],
    "source": [
-    "print('Context Relevance Score using Embed v3 model:', results_openai[7]['score_context_relevance_embedding_model_cohere'])\n",
-    "print('Context Relevance Score using OpenAI model:', results_openai[7]['score_context_relevance_embedding_model_openai'])"
+    "print('Context Relevance Score using Embed v3 model:', results[7]['score_context_relevance_embedding_model_cohere'])\n",
+    "print('Context Relevance Score using OpenAI model:', results[7]['score_context_relevance_embedding_model_openai'])"
    ]
   },
   {
@@ -359,8 +359,8 @@
    },
    "outputs": [],
    "source": [
-    "score_context_relevance_openai = list(pl.DataFrame(results_openai)['score_context_relevance_embedding_model_openai'])\n",
-    "score_context_relevance_cohere = list(pl.DataFrame(results_openai)['score_context_relevance_embedding_model_cohere'])"
+    "score_context_relevance_openai = list(pl.DataFrame(results)['score_context_relevance_embedding_model_openai'])\n",
+    "score_context_relevance_cohere = list(pl.DataFrame(results)['score_context_relevance_embedding_model_cohere'])"
    ]
   },
   {
