--- a/examples/python/checks/evaluate_response_completeness.ipynb
+++ b/examples/python/checks/evaluate_response_completeness.ipynb
@@ -62,11 +62,8 @@
    "source": [
     "from uptrain import EvalLLM, Evals\n",
     "import json\n",
-    "import os\n",
     "\n",
-    "OPENAI_API_KEY = os.environ.get(\"OPENAI_API_KEY\")\n",
-    "\n",
-    "# OPENAI_API_KEY = \"sk-*****************\"  # Insert your OpenAI key here"
+    "OPENAI_API_KEY = \"sk-*****************\"  # Insert your OpenAI key here"
    ]
   },
   {
