--- a/docs/managed-services/overview.mdx
+++ b/docs/managed-services/overview.mdx
@@ -6,7 +6,7 @@ description: Use Uptrain Client to remotely access the Uptrain toolkit
 The UpTrain Client lets you remotely access the UpTrain toolkit from your local machine. You can use it to:
 
 - Run evaluations
-- Evaluate Models
-- Build your own checksets and datasets
+- Experiment with prompts and models
+- Create custom metrics
 
 To get started, you can follow the [UpTrain API Client tutorial](/tutorials/uptrain-api-client)
