Update introduction card

--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -25,12 +25,12 @@ UpTrain provides a single line code integration into your existing LLM codebase 
     Easy remote access to the UpTrain toolkit 
   </Card>
   <Card
-    title="Key Components"
-    href="/key-components"
+    title="Pre-defined Metrics"
+    href="/key-components/evals"
     icon="list"
     color="#b50e0e"
   >
-    The core working of UpTrain
+    Hassle-free evaluation of your LLMs
   </Card>
   <Card
     title="API Reference"
