Add ConversationSatisfaction to evals.mdx

--- a/docs/key-components/evals.mdx
+++ b/docs/key-components/evals.mdx
@@ -126,3 +126,12 @@ Columns required:
 
 Paramters:
 - `method` - Method to calculate the score ('rouge', 'exact' or 'llm')
+
+
+### ConversationSatisfaction
+
+Measures the user's satisfaction with the conversation with the LLM/AI assistant based on completeness and user's acceptance.
+
+Columns required:
+- `role` - The role of the person whose satisfaction is being measured
+- `chat` - The chat between the user and the LLM/AI assistant
