--- a/examples/checks/evaluate_guideline_adherence.ipynb
+++ b/examples/checks/evaluate_guideline_adherence.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "90f4ff7d-10b9-482e-aa92-85c64ffc4057",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "bf292449-f9df-4e0f-912a-1a3fdedc19f1",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "f2291e1a-389b-472d-8fb3-5aa49f1fee37",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "d15fb087-3ed2-442f-9b23-35c7dbc6128e",
    "metadata": {},
    "outputs": [
@@ -107,9 +107,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-09-30 02:20:11.938\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m95\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n",
-      "\u001b[32m2023-09-30 02:20:15.611\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m95\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n",
-      "\u001b[32m2023-09-30 02:20:18.779\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m95\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
+      "\u001b[32m2023-12-18 19:12:15.971\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2023-12-18 19:12:17.092\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n",
+      "\u001b[32m2023-12-18 19:12:17.809\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.framework.evalllm\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mSending evaluation request for rows 0 to <50 to the Uptrain\u001b[0m\n"
      ]
     }
    ],
@@ -124,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "0a950849-0348-450f-add0-cea2c1423525",
    "metadata": {},
    "outputs": [
@@ -136,14 +142,14 @@
       "   {\n",
       "      \"question\": \"Which is the most popular global sport?\",\n",
       "      \"response\": \"Football is the most popular sport with around 4 billion followers worldwide.\",\n",
-      "      \"score_No Numbers_adherence\": 0.0,\n",
-      "      \"explanation_No Numbers_adherence\": \"Argument for option A (The given guideline is strictly adhered to):\\n1. The guideline states that the response should not contain any specific numbers or pricing-related information.\\n2. The response provided by the ML model mentions that football is the most popular sport with around 4 billion followers worldwide.\\n3. The response does not contain any specific numbers or pricing-related information.\\n4. Therefore, the response adheres to the given guideline.\\n\\nArgument for option B (The given guideline is strictly violated):\\n1. The guideline states that the response should not contain any specific numbers or pricing-related information.\\n2. The response provided by the ML model mentions that football is the most popular sport with around 4 billion followers worldwide.\\n3. The response contains the specific number \\\"4 billion\\\" which is a violation of the guideline.\\n4. Therefore, the response violates the given guideline.\\n\\nJudgement:\\nBased on the arguments presented, it can be concluded that the ML model violates the given guideline by providing a response that contains specific numbers. Therefore, the correct answer is B (The given guideline is strictly violated).\\n\\n0.0\\n0.0\"\n",
+      "      \"score_No Numbers_adherence\": null,\n",
+      "      \"explanation_No Numbers_adherence\": null\n",
       "   },\n",
       "   {\n",
       "      \"question\": \"How to install UpTrain?\",\n",
       "      \"response\": \"You can install UpTrain by running - pip install uptrain.\",\n",
-      "      \"score_No Numbers_adherence\": 1.0,\n",
-      "      \"explanation_No Numbers_adherence\": \"The given guideline states that the response should not contain any specific numbers or pricing-related information. \\n\\nIn the provided question-answer pair:\\n[Question]: How to install UpTrain?\\n[Response]: You can install UpTrain by running - pip install uptrain.\\n\\nThe response does not contain any specific numbers or pricing-related information. It provides a general instruction on how to install UpTrain using the pip install command. \\n\\nTherefore, the given guideline is strictly adhered to.\\n\\nScore: 1.0\"\n",
+      "      \"score_No Numbers_adherence\": null,\n",
+      "      \"explanation_No Numbers_adherence\": null\n",
       "   }\n",
       "]\n"
      ]
@@ -170,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
