--- a/examples/checks/evaluate_response_relevance.ipynb
+++ b/examples/checks/evaluate_response_relevance.ipynb
@@ -17,7 +17,7 @@
    "id": "c2403e87-604e-44c6-8d9e-6c5806bc4cd7",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center;\">Evaluating Relevance Relevance</h1>"
+    "<h1 style=\"text-align: center;\">Evaluating Response Relevance</h1>"
    ]
   },
   {
